Updated gitignore to exclude jetbrains project folder and npm modules Installed gulp, gulp-htmlhint, gulp-inline-css, browser-sync, gulp-special-html, gulp-litmus, gulp-sass Created a ruleset for htmlhint Added litmus settings to a build config file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Exclude these files from the git repo
+.idea
 *.sublime-project
 *.sublime-workspace
+node_modules
 
 # Hidden system files
 *.DS_Store
